--- a/src/styles/scss/card.scss
+++ b/src/styles/scss/card.scss
@@ -4,24 +4,38 @@
   font-weight: 400;
 }
 
+$border-color: #f3f3f3;
+
 .card {
   width: 200px;
-  padding: 30px 14px 14px;
+  padding: 0 14px 14px;
   display: flex;
   flex-direction: column;
   background: #fff;
-  border: 1px solid #f3f3f3;
+  border: 1px solid $border-color;
   border-radius: 5px;
   margin-bottom: 51px;
 
+  &__box-image {
+    display: flex;
+    justify-content: center;
+    padding-top: 14px;
+    margin: 13px 0 42px;
+    border: 3px solid transparent;
+    transition: transform 1s linear;
+
+    &:hover {
+      transform: scale(1.2);
+      border: 3px $border-color solid;
+    }
+  }
   &__image {
     width: 160px;
     height: 134px;
-    margin: auto;
   }
 
   &__description {
-    margin: 45px 0 5px;
+    margin: 0 0 5px;
     font-size: 12px;
     font-weight: 500;
     line-height: 15px;
@@ -73,6 +87,9 @@
     background-color: $light-blue;
     border-radius: 5px;
     margin-top: 20px;
+    transition: background-color 0.4s linear,
+      border-color 0.4s linear,
+      color 0.4s linear;
   }
 
   &:hover {
