--- a/src/styles/scss/header.scss
+++ b/src/styles/scss/header.scss
@@ -1,7 +1,6 @@
 .header {
-  display: flex;
-  justify-content: space-between;
-  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr auto;
   align-items: center;
   padding: 0 50px;
   margin-bottom: 50px;
