--- a/src/styles/scss/nav.scss
+++ b/src/styles/scss/nav.scss
@@ -2,36 +2,33 @@ $light-blue: #00acdc;
 
 .nav {
   margin: 0;
-  display: flex;
   height: 60px;
 
   &__item {
-    margin-left: 20px;
     position: relative;
     cursor: pointer;
   }
 
   &__list {
+    display: grid;
+    grid-template-columns: repeat(8, auto);
+    gap: 20px;
     padding: 0;
-    display: flex;
+    margin-top: 0;
     list-style: none;
-    align-items: center;
-    text-align: center;
 
     .nav__item:first-child {
       margin-left: 0;
     }
-
   }
 
   &__link {
     padding: 23px 0;
-    display: flex;
-    flex-direction: column;
+    text-align: center;
+    line-height: 60px;
     text-decoration: none;
     text-transform: uppercase;
     color: black;
-    text-align: center;
 
     &:hover {
       color: $light-blue;
