--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -12,12 +12,11 @@ body {
 }
 
 .header {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
   padding: 0 50px;
   margin-bottom: 50px;
-  display: flex;
-  justify-content: space-between;
-  text-align: center;
-  align-items: center;
   background: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
   font-weight: 500;
@@ -29,22 +28,21 @@ body {
 
 .nav {
   margin: 0;
-  display: flex;
   height: 60px;
 }
 
 .nav__item {
-  margin-left: 20px;
   position: relative;
   cursor: pointer;
 }
 
 .nav__list {
+  display: grid;
+  grid-template-columns: repeat(8, auto);
+  gap: 20px;
   padding: 0;
-  display: flex;
+  margin-top: 0;
   list-style: none;
-  align-items: center;
-  text-align: center;
 }
 
 .nav__list .nav__item:first-child {
@@ -53,12 +51,11 @@ body {
 
 .nav__link {
   padding: 23px 0;
-  display: flex;
-  flex-direction: column;
+  text-align: center;
+  line-height: 60px;
   text-decoration: none;
   text-transform: uppercase;
   color: black;
-  text-align: center;
 }
 
 .nav__link:hover {
@@ -82,8 +79,8 @@ body {
 }
 
 .container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
   justify-content: space-between;
   max-width: 944px;
   margin: 0 auto;
@@ -98,6 +95,12 @@ body {
 @media all and (min-width: 1200px) {
   .container {
     width: calc(100% - 256px);
+  }
+}
+
+@media all and (max-width: 1000px) {
+  .container {
+    grid-template-columns: repeat(auto-fit, 200px);
   }
 }
 
