--- a/src/styles/scss/container.scss
+++ b/src/styles/scss/container.scss
@@ -1,25 +1,14 @@
 .container {
   display: grid;
-  grid-template-columns: repeat(4, auto);
-  justify-content: space-between;
-  max-width: 944px;
+  grid-template-columns: repeat(4, 200px);
+  gap: 51px 48px;
+  justify-content: center;
   margin: 0 auto;
 }
 
-@media all and (min-width: 1024px) {
-  .container {
-    width: calc(100% - 80px);
-  }
-}
-
-@media all and (min-width: 1200px) {
-  .container {
-    width: calc(100% - 256px);
-  }
-}
-
-@media all and (max-width: 1000px) {
+@media all and (max-width: 950px) {
   .container {
     grid-template-columns: repeat(auto-fit, 200px);
+    justify-content: center;
   }
 }
