--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -80,27 +80,16 @@ body {
 
 .container {
   display: grid;
-  grid-template-columns: repeat(4, auto);
-  justify-content: space-between;
-  max-width: 944px;
+  grid-template-columns: repeat(4, 200px);
+  gap: 51px 48px;
+  justify-content: center;
   margin: 0 auto;
 }
 
-@media all and (min-width: 1024px) {
-  .container {
-    width: calc(100% - 80px);
-  }
-}
-
-@media all and (min-width: 1200px) {
-  .container {
-    width: calc(100% - 256px);
-  }
-}
-
-@media all and (max-width: 1000px) {
+@media all and (max-width: 950px) {
   .container {
     grid-template-columns: repeat(auto-fit, 200px);
+    justify-content: center;
   }
 }
 
@@ -120,7 +109,6 @@ body {
   background: #fff;
   border: 1px solid #f3f3f3;
   border-radius: 5px;
-  margin-bottom: 51px;
 }
 
 .card__box-image {
